# storage/api-docs/api-docs.json
@@ -14,6 +14,101 @@
         }
     ],
     "paths": {
+        "/blogs": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Lists available Users",
+                "description": "Gets all available Users resources",
+                "operationId": "App\\Http\\Controllers\\BlogsController::index",
+                "parameters": [
+                    {
+                        "name": "paginate",
+                        "in": "query",
+                        "description": "paginate",
+                        "required": false,
+                        "schema": {
+                            "title": "Paginate",
+                            "description": "The unique identifier of a Post resource",
+                            "type": "boolean",
+                            "example": "true"
+                        }
+                    },
+                    {
+                        "name": "dataSearch",
+                        "in": "query",
+                        "description": "Post resource name",
+                        "required": false,
+                        "schema": {
+                            "description": "The unique identifier of a Post resource",
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "sortField",
+                        "in": "query",
+                        "description": "Sort field",
+                        "required": false,
+                        "schema": {
+                            "title": "Title",
+                            "description": "The unique identifier of a Post resource",
+                            "type": "string",
+                            "example": "title"
+                        }
+                    },
+                    {
+                        "name": "sortOrder",
+                        "in": "query",
+                        "description": "Sort order field",
+                        "schema": {
+                            "title": "sortOrder",
+                            "description": "The unique identifier of a Post resource",
+                            "type": "string",
+                            "example": "asc"
+                        }
+                    },
+                    {
+                        "name": "perPage",
+                        "in": "query",
+                        "description": "Sort order field",
+                        "schema": {
+                            "title": "perPage",
+                            "description": "The unique identifier of a Post resource",
+                            "type": "number",
+                            "default": "0"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A list with Users",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated.",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "default": {
+                        "description": "an \"unexpected\" error",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "passport": [
+                            "*"
+                        ]
+                    }
+                ]
+            }
+        },
         "/example": {
             "get": {
                 "tags": [
